# juboss

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json
public/assets/cat/: generate-frames.sh
public/config/: animations.json
scripts/: remove-connected-white-bg.mjs
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
