[package]
name = "juboss-desktop-pet"
version = "0.1.0"
description = "A transparent desktop pet built with Tauri, Svelte, TypeScript, and Rust."
authors = ["Juboss"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "juboss_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
